--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -162,10 +162,9 @@ jobs:
             .targets.staging.namespace = "${{ env.REPO_NAME }}"
             ' 'armory-deploy.yml'
 
-      - name: Deploy
-        run: |
-          helm upgrade --install --timeout 10m anythink-market ./charts/ \
-              --set clusterEnv=${{ secrets.CLUSTER_ENV }} \
-              --set frontend.image.tag=${{ env.IMAGE_TAG }} \
-              --set backend.image.tag=${{ env.IMAGE_TAG }} \
-              --set database.deploy=false
+      - name: Deployment
+        uses: armory/cli-deploy-action@main
+        with:
+          clientId: "${{ secrets.ARMORY_CLIENT_ID }}"
+          clientSecret:  "${{ secrets.ARMORY_CLIENT_SECRET }}"
+          path-to-file: "armory-deploy.yml"
