--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -167,4 +167,4 @@ jobs:
         with:
           clientId: "${{ secrets.ARMORY_CLIENT_ID }}"
           clientSecret:  "${{ secrets.ARMORY_CLIENT_SECRET }}"
-          path-to-file: "armory-deploy.yml"
+          path-to-file: "/armory-deploy.yml"
